--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   audioplayers: ^4.1.0
-  just_audio: ^0.9.34
+  flutter_splash_screen: ^1.0.0+6
+  flutter_media_metadata: ^1.0.0+1
+  file_picker: ^5.3.2
+
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +65,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+     - images/cover.png
      - images/img-1.jpg
      - images/img-2.jpeg
 
