--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_splash_screen: ^1.0.0+6
   flutter_media_metadata: ^1.0.0+1
   file_picker: ^5.3.2
+  google_fonts: ^4.0.4
 
 
 dev_dependencies:
