--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ flutter:
      - images/cover.png
      - images/img-1.jpg
      - images/img-2.jpeg
+     - images/img-3.png
+     - images/img-4.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
