--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   flutter_media_metadata: ^1.0.0+1
   file_picker: ^5.3.2
   google_fonts: ^4.0.4
+  assets_audio_player: ^3.0.6
+  flutter_native_splash: ^2.3.1
+
 
 
 dev_dependencies:
@@ -97,3 +100,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_native_splash:
+  background_image: "images/img-4.jpg"
+  android_13:
+    image:images/cover.png
