--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,6 @@ dependencies:
   file_picker: ^5.3.2
   google_fonts: ^4.0.4
   assets_audio_player: ^3.0.6
-  flutter_native_splash: ^2.3.1
 
 
 
@@ -70,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - images/cover.png
+     - images/logo.png
      - images/img-1.jpg
      - images/img-2.jpeg
      - images/img-3.png
@@ -100,7 +100,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-flutter_native_splash:
-  background_image: "images/img-4.jpg"
-  android_13:
-    image:images/cover.png
